--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://blog.techidaily.com
+url: https://blog-min.techidaily.com
 permalink: :title/
 permalink_defaults:
 pretty_urls:
@@ -112,10 +112,10 @@ sitemap:
 ## 执行 hexo clean && hexo deploy 。
 ## 如果提交失败
 ## cd .deploy_git
-## git push -u https://$GITHUB_DEPLOY_TOKEN@github.com/techidaily/site-blog.git HEAD:gh-pages --force
+## git push -u https://$GITHUB_DEPLOY_TOKEN@github.com/techidaily/site-blog-min.git HEAD:gh-pages --force
 deploy:
   type: git
   repo:  
-    url: https://github.com/techidaily/site-blog.git
+    url: https://github.com/techidaily/site-blog-min.git
     branch: gh-pages
     token: $GITHUB_DEPLOY_TOKEN
